setup initial css

--- a/index.html
+++ b/index.html
@@ -6,21 +6,34 @@
     <title>LCA - Assessment</title>
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- Header start -->
     <header>
-      <div class="full-width header-outer"></div>
+      <div class="full-width header-full-width">
+        <div class="container">
+          <div class="header flex nowrap justify-between">
+            <div class="header-logo">
+              <a href="#" class="inline-block"
+                ><img src="./src/img/logo_White_LCA.png" alt=""
+              /></a>
+            </div>
+            <div class="header-right">
+              <img src="./src/img/roundup_comp.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
     <!-- Header end -->
 
     <!-- Main content start -->
-    <div class="full-width main-outer"></div>
+    <div class="full-width main-content-full-width"></div>
     <!-- Main content end -->
 
     <!-- Footer start -->
-    <div class="full-width footer-outer"></div>
+    <div class="full-width footer-full-width"></div>
     <!-- Footer end -->
 
     <!-- jQuery cdn-->
