--- a/index.html
+++ b/index.html
@@ -29,11 +29,46 @@
     <!-- Header end -->
 
     <!-- Main content start -->
-    <div class="full-width main-content-full-width"></div>
+    <main>
+      <section class="full-width main-content-full-width"></section>
+      <section class="full-width disclaimer-full-width">
+        <div class="container">
+          <div class="disclaimer-content">
+            <p>
+              <span>Attorney Advertising Disclaimer:</span> The information you
+              obtain at this site is not, nor is it intended to be, legal
+              advice. You should consult an attorney for advice regarding your
+              individual situation. We invite you to contact us and welcome your
+              calls, letters and electronic mail. Contacting us does not create
+              an attorney-client relationship. Please do not send any
+              confidential information to us until such time as an
+              attorney-client relationship has been established. Prior results
+              do not guarantee a similar outcome.
+            </p>
+            <p>
+              This website is not part of the Facebook, Inc. Additionally, this
+              site is NOT endorsed by Facebook, Inc. in any way. Facebook is a
+              trademark of Facebook, INC.
+            </p>
+            <p>
+              This website is not part of the Facebook, Inc. Additionally, this
+              site is NOT endorsed by Facebook, Inc. in any way. Facebook is a
+              trademark of Facebook, INC.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Main content end -->
 
     <!-- Footer start -->
-    <div class="full-width footer-full-width"></div>
+    <footer>
+      <div class="full-width footer-full-width">
+        <div class="container text-center footer">
+          <p>&copy; 2024 Legal Claim Assistant. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <!-- Footer end -->
 
     <!-- jQuery cdn-->
