added disclaimer section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
 
     <!-- Main content start -->
     <main>
-      <section class="full-width main-content-full-width"></section>
+      <section class="full-width main-content-full-width">
+        <div class="container">
+          <div class="main-content-left">
+            <div class="main-content-img">
+              <img src="" alt="" />
+            </div>
+          </div>
+          <div class="main-content-right"></div>
+        </div>
+      </section>
       <section class="full-width disclaimer-full-width">
         <div class="container">
           <div class="disclaimer-content">
@@ -44,11 +53,6 @@
               confidential information to us until such time as an
               attorney-client relationship has been established. Prior results
               do not guarantee a similar outcome.
-            </p>
-            <p>
-              This website is not part of the Facebook, Inc. Additionally, this
-              site is NOT endorsed by Facebook, Inc. in any way. Facebook is a
-              trademark of Facebook, INC.
             </p>
             <p>
               This website is not part of the Facebook, Inc. Additionally, this
