added form content

--- a/index.html
+++ b/index.html
@@ -32,12 +32,51 @@
     <main>
       <section class="full-width main-content-full-width">
         <div class="container">
-          <div class="main-content-left">
-            <div class="main-content-img">
-              <img src="" alt="" />
+          <div class="main-content">
+            <h1>RoundUp</h1>
+            <h3>
+              If You Have Cancer &amp; Have Used <b>Roundup</b>, You May Be
+              Entitled To <b>Significant Compensation</b>.
+            </h3>
+            <h3>
+              Fill in this <b>simple quiz</b> to find out if you<br />
+              qualify for compensation
+            </h3>
+          </div>
+          <div class="main-contents flex align-center">
+            <div class="main-content-left w-50 flex justify-end">
+              <div class="main-content-img">
+                <img src="./src/img/free-peek.png" alt="" />
+              </div>
+            </div>
+            <div class="main-content-right w-50">
+              <div class="main-form-content">
+                <div class="form-header-content">
+                  <h4>Limited Time to Apply</h4>
+                </div>
+                <div class="steps flex align-center relative">
+                  <div class="step step-1">
+                    <span>1</span>
+                  </div>
+                  <div class="step step-2">
+                    <span>2</span>
+                  </div>
+                  <div class="step step-3">
+                    <span>3</span>
+                  </div>
+                  <div class="step step-4">
+                    <span>4</span>
+                  </div>
+                </div>
+                <div class="form-steps">
+                  <div class="form-step"></div>
+                  <div class="form-step"></div>
+                  <div class="form-step"></div>
+                </div>
+                <form action="#" class="main-form"></form>
+              </div>
             </div>
           </div>
-          <div class="main-content-right"></div>
         </div>
       </section>
       <section class="full-width disclaimer-full-width">
