--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                   <h4>Limited Time to Apply</h4>
                 </div>
                 <div class="steps flex align-center relative">
-                  <div class="step step-1 complete">
+                  <div class="step step-1 active">
                     <span>1</span>
                   </div>
-                  <div class="step step-2 active">
+                  <div class="step step-2">
                     <span>2</span>
                   </div>
                   <div class="step step-3">
@@ -78,7 +78,7 @@
                   </div>
                 </div>
                 <div class="form-steps">
-                  <div class="form-step">
+                  <div class="form-step active">
                     <span class="form-label">
                       Were you (or a loved one) exposed to Roundup Weed
                       Killer?</span
@@ -214,7 +214,7 @@
                       </ul>
                     </div>
                   </div>
-                  <div class="form-step">
+                  <div class="form-step personal-info">
                     <span class="form-label">
                       Thanks for answering the questions. Please provide us with
                       your basic contact information where we can reach
@@ -243,11 +243,11 @@
                         type="tel"
                         id="tel"
                         name="tel"
-                        placeholder="(___)-___-____"
+                        placeholder="000-00-00000"
                       />
                     </div>
                   </div>
-                  <div class="form-step-btn">
+                  <div class="form-step-btn flex justify-end">
                     <button class="form-btn">Next</button>
                   </div>
                   <div class="terms-condition">
